style.css
body {
    height:100vh; /*takes up 100% of the user's viewport height*/
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

h5 {
    margin: 0;
}

.options {
    display: flex;
   
    align-items: center;
}
.square {
    flex: 1; 
    aspect-ratio: 1 / 1; /* width / height */
    background-color: rgb(181, 181, 181);
    margin: 1px;
}


.row {
    display:flex;
}

.col {
    display:flex;
    flex-direction: column;
    border: solid rgb(186, 168, 168) 15px;
    width:700px;
    height:700px;
}

#heading {
    font-size: 40px;
}

.options-Bar {
    display:flex;
    justify-content: space-between;
}

